Fix subtext alignment under info images

--- a/style.css
+++ b/style.css
@@ -86,6 +86,12 @@ p {
   text-align: center;
 }
 
+.info-content-child {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 button {
   width: 115px;
   padding: 4px;
@@ -134,4 +140,5 @@ button {
   font-weight:300;
   font-style: italic;
   color: #1f2937;
+  padding: 75px 125px;
 }
